(lang dune 3.23)

(name oclox)

(generate_opam_files true)

(source
 (github pkitazos/oclox))

(authors "Petros Kitazos petroskitazos@gmail.com")

(maintainers "Petros Kitazos petroskitazos@gmail.com")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name oclox)
 (synopsis "The Lox Programming Language built in OCaml")
 (description "The Lox Programming Language built in OCaml (hopefully)")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
